exercises/counter/openshift-configuration/backend/counter-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
      - name: counter-backend
        image: santiagotoro2023/m109-st-counter-backend:0.1
        ports:
          - containerPort: 8080
