exercises/counter/openshift-configuration/backend/counter-backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-backend
spec:
  to:
    kind: Service
    name: counter-backend
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
